--- a/srcs/nginx.conf
+++ b/srcs/nginx.conf
@@ -26,4 +26,5 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server;
 	return 301 https://$server_name$request_uri;
+    server_name localhost;
 }
